objects/Subscription__c.object
<CustomObject>
    <fields>
        <fullName>Account_Usage__c</fullName>
        <description>Placeholder for future release.</description>
        <label>Account Usage</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>End user accounts for which subscriptions are attached.</description>
        <label>End-User Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subscriptions (End-User Account Name)</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account_lkp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>You can only associate end customer accounts to an subscription. Search results only display end customer accounts</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_Renewal__c</fullName>
        <description>Not used for this release</description>
        <label>Auto-Renewal</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Name__c</fullName>
        <description>Contact names separated with commas.</description>
        <label>Billing Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Partner__c</fullName>
        <description>For direct order, this would be same as end customer account. For any other type of order this would be partner name.</description>
        <label>Billing Partner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <description>Contract end date of the subscription</description>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Customer_Contact_Name__c</fullName>
        <description>Contact names separated with commas.</description>
        <label>End-Customer Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Total_Booking__c</fullName>
        <description>Formula field showing monthly recurring charge * renewal term.This amount is shown in 1000s.</description>
        <formula>IF(Opportunity__r.Id==null, (Monthly_Recurring_Commit__c *  Initial_ContractTerm__c)/1000, (Opty_MRC__c *  Opty_Renewal_Term__c)/1000)</formula>
        <label>Expected Total Booking</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expiring__c</fullName>
        <description>Formula field showing number of days the contract is expiring in.</description>
        <formula>Contract_End_Date__c - Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expiring in (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_ContractTerm__c</fullName>
        <description>Initial contract term of the subscription.</description>
        <label>Initial Contract Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lifetime_Value__c</fullName>
        <description>Placeholder for future release.</description>
        <label>Lifetime Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Recurring_Commit__c</fullName>
        <description>Monthly recurring charge of the original subscription.</description>
        <label>Monthly Recurring Charge($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Offer_Type__c</fullName>
        <description>Offertype of the subscription.</description>
        <label>Offer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SXP</fullName>
                </value>
                <value>
                    <fullName>WEBEX</fullName>
                </value>
                <value>
                    <fullName>HCS</fullName>
                </value>
                <value>
                    <fullName>PRIME_HOME</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpportunityCreated__c</fullName>
        <description>This flag will be true if opportunity is created for renewal subscription.</description>
        <formula>IF(Opportunity__r.Id != null, 'Yes', 'No')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OpportunityCreated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Expected_Product__c</fullName>
        <label>Opportunity Expected Product</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <description>Formula field to display opportunity.</description>
        <formula>Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <description>Formula field to display opportunity.</description>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity id user for internal purpose.</description>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opty_MRC__c</fullName>
        <description>Monthly recurring charge of the subscription while creating the opportunity.</description>
        <label>Monthly Recurring Charge($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opty_Renewal_Term__c</fullName>
        <description>Renewal term of the subscription while creating opportunity.</description>
        <label>Renewal Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Code__c</fullName>
        <description>Plan code of the subscription.</description>
        <label>Plan Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Name__c</fullName>
        <defaultValue>"Software Subscription"</defaultValue>
        <description>Type of the renewal.</description>
        <label>Renewal Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Term__c</fullName>
        <description>Renewal term of the original subscription.</description>
        <label>Renewal Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Type__c</fullName>
        <description>Auto/manual type of the subscription.</description>
        <label>Renewal Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Source__c</fullName>
        <description>Subscription source.
Subscriptions coming from SBP - Renewal.
Creating new subscriptions - New.</description>
        <label>Service Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Renewal</fullName>
                    <default>true</default>
                    <label>Renewal</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the subscription.</description>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Name_picklist__c</fullName>
        <label>Sub Name</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cisco WebEx Named User</fullName>
                </value>
                <value>
                    <fullName>Cisco WebEx Employee Count</fullName>
                </value>
                <value>
                    <fullName>Cisco WebEx Active User</fullName>
                </value>
                <value>
                    <fullName>Cisco WebEx Ports</fullName>
                </value>
                <value>
                    <fullName>Cisco HCS Subscription Offer</fullName>
                </value>
                <value>
                    <fullName>Prime Home Hosted Usage Based Offer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Code__c</fullName>
        <description>Code of the subscription.</description>
        <label>Subscription Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Name__c</fullName>
        <description>Name of the subscription.</description>
        <label>Subscription Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subname__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subscriptionoffertype id for internal use.</description>
        <label>Subscriptionoffertype</label>
        <referenceTo>Subscriptionoffertype__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Subscription</label>
    <nameField>
        <label>Subscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>